Remove CNAME file to stop custom domain redirection

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Polish You Pretty Nail Salon in Seattle" />
   <meta property="og:description" content="Discover premium nail, hair, and beauty services in Seattle with senior discounts." />
-  <meta property="og:image" content="https://polishyoutprettynailsalon.com/images/salon.jpg" />
-  <meta property="og:url" content="https://polishyoutprettynailsalon.com" />
+  <meta property="og:image" content="images/nail-salon.jpg" />
+  <meta property="og:url" content="https://tish206.github.io/Seattle/" />
   
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
@@ -65,7 +65,7 @@
     <header class="text-center mb-5">
       <h1>Polish You Pretty Nail Salon</h1>
       <p class="lead">Seattle's Premier Nail and Beauty Salon</p>
-      <img src="nail-salon.jpg" alt="Polish You Pretty Nail Salon in Seattle offering manicures and pedicures" class="img-fluid rounded">
+      <img src="images/nail-salon.jpg" alt="Polish You Pretty Nail Salon in Seattle offering manicures and pedicures" class="img-fluid rounded">
     </header>
 
     <!-- About Section -->
@@ -79,14 +79,14 @@
       <h2>Our Services</h2>
       <h3>Manicures and Pedicures</h3>
       <p>We provide manicures, pedicures, hair styling, and spa packages in Seattle.</p>
-      <a href="/services" title="Explore our nail and beauty services in Seattle" class="btn btn-primary">Explore our services</a>
-      <a href="/nail-services" title="Learn more about our nail services in Seattle" class="btn btn-secondary">Nail Services</a>
+      <a href="services.html" title="Explore our nail and beauty services in Seattle" class="btn btn-primary">Explore our services</a>
+      <a href="nail-services.html" title="Learn more about our nail services in Seattle" class="btn btn-secondary">Nail Services</a>
     </section>
 
     <!-- Community Resources Section -->
     <section id="resources" class="mb-5">
       <h2>Community Resources</h2>
-      <p>Learn more about our <a href="/community-resources" title="Community resources for Seattle seniors">community resources</a>, including the Hyde Shuttle.</p>
+      <p>Learn more about our <a href="community-resources.html" title="Community resources for Seattle seniors">community resources</a>, including the Hyde Shuttle.</p>
     </section>
 
     <!-- Contact Section -->
@@ -94,7 +94,7 @@
       <h2>Contact Us</h2>
       <p><strong>Address:</strong> 6007 Martin Luther King Jr Way S, Seattle, WA 98118</p>
       <p><strong>Phone:</strong> <a href="tel:+12063481574">(206) 348-1574</a></p>
-      <a href="/sitemap.xml" title="View our sitemap" class="btn btn-outline-primary">Sitemap</a>
+      <a href="sitemap.xml" title="View our sitemap" class="btn btn-outline-primary">Sitemap</a>
     </section>
   </main>
 
@@ -119,7 +119,7 @@
       "postalCode": "98118"
     },
     "telephone": "+12063481574",
-    "url": "https://polishyoutprettynailsalon.com",
+    "url": "https://tish206.github.io/Seattle/",
     "description": "Premium nail, hair, and beauty services in Seattle with senior discounts."
   }
   </script>
