Delete duplicate index.html file

--- a/index..html
+++ b/index..html
@@ -4,12 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Polish You Pretty Nail Salon | Senior Community Resources</title>
+  
+  <!-- SEO Meta Tags -->
   <meta name="description" content="Polish You Pretty Nail Salon provides nail, hair, and beauty services in Seattle. Discover local senior community resources, including Hyde Shuttle transportation for Seattle seniors.">
   <meta name="keywords" content="Polish You Pretty, Seattle nail salon, senior community resources, Hyde Shuttle, senior transportation, beauty services">
   
-  <!-- Link to Bootstrap for Responsive Design -->
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Polish You Pretty Nail Salon in Seattle" />
+  <meta property="og:description" content="Discover premium nail, hair, and beauty services in Seattle with senior discounts." />
+  <meta property="og:image" content="images/nail-salon.jpg" />
+  <meta property="og:url" content="https://tish206.github.io/Seattle/" />
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  
+  <!-- Link to Bootstrap and External CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
   <style>
     body {
       padding-top: 70px;
@@ -19,6 +34,10 @@
       padding: 20px;
       text-align: center;
       margin-top: 40px;
+    }
+    /* Smooth Scrolling */
+    html {
+      scroll-behavior: smooth;
     }
   </style>
 </head>
