Updated index.html with fixed image paths and other improvements

--- a/index..html
+++ b/index..html
@@ -292,8 +292,8 @@
       <p><strong>Address:</strong> 6007 Martin Luther King Jr Way S, Seattle, WA 98118</p>
       <p><strong>Phone:</strong> <a href="tel:2063481574">(206) 348-1574</a></p>
       <a href="https://polishyoutprettynailsalon.com/book" class="btn btn-primary btn-lg">Book an Appointment</a>
-      <!-- Suggested Image -->
-      <img src=+ alt="Map showing the salon location" class="img-fluid my-4">
+      <!-- Fixed Image Path -->
+      <img src="images/map-location.jpg" alt="Map showing the salon location" class="img-fluid my-4">
     </section>
   </main>
 
