--- a/index..html
+++ b/index..html
@@ -22,8 +22,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">>
   <link rel="stylesheet" href="styles.min.css"> <!-- Use minified CSS -->
   <link href="theme.css" rel="stylesheet"> <!-- Add your custom theme -->
-  <link rel="stylesheet" href="css/bridge-theme.css"> <!-- Add Bridge theme CSS -->
-  <link rel="stylesheet" href="css/style.css"> <!-- WordPress theme CSS -->
+  <link rel="stylesheet" href="css/bridge-theme.css"> <!-- Static path to Bridge theme CSS -->
+  <link rel="stylesheet" href="css/style.css"> <!-- Static path to WordPress theme CSS -->
   <link rel="stylesheet" href="css/theme.css"> <!-- Additional theme CSS -->
   <script src="js/bridge-theme.js" defer></script> <!-- Add Bridge theme JS -->
   <script src="js/scripts.js" defer></script> <!-- WordPress theme JS -->
@@ -110,7 +110,7 @@
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow" aria-label="Main Navigation">
     <div class="container">
-      <a class="navbar-brand" href="#">Polish You Pretty Nail Salon</a>
+      <a class="navbar-brand" href="#">Polish You Pretty Nail Salon</a> <!-- Static site title -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
